# BilayAna

./: .gitignore  .project  AnalyseLipidSystem.py  LICENSE  LipidSystems.py  README.txt  SystemInfo.py  ToDo  analysistools.py  energy_recalculation.mdp  execute_lipid_analysis  ideas.txt  inputfile  new.py  samfile.txt  setup.cfg  setup.py
bilana/: __init__.py  __main__.py  command_line.py  common.py  energyfilecreator.py  gromacstoolautomator.py  lipidmolecules.py  log.py  mainanalysis.py  misc.py  plotting.py  systeminfo.py  tester.py  testytest.py
bilana.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bilana/analysis/: __init__.py  area_per_lipid.py  compressibility.py  curvature.py  curvature_scd.py  density.py  density_leaflets.py  electron_density.py  energy.py  hbonds.py  lateraldistribution.py  leaflets.py  msd.py  msd_direct_mdanalysis.py  msd_direct_mdanalysis_smooth.py  msd_gromacs.py  neighbors.py  order.py  order_gromacs.py  protein.py  rdf.py  rdf_1.py  rmsd.py  rotate.py  tilt_sterol.py  voronoi.py
bilana/definitions/: lipidmolecules.py  lipidmolecules_coarse.py  structure_formats.py
example/: inputfile
scripts/: calculate_energies.py  submit_energycalculations  submit_energycalculations.py
src/: __main__.py  command_line.py  common.py  energyfilecreator.py  gromacstoolautomator.py  lipidmolecules.py  mainanalysis.py  plotting.py  systeminfo.py
src.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: AnalyseLipidSystem_noclass.py  analyse_lipid_system_old  myAnalysisTools.py  myFileoutputTools.py  oldcode
(+6 files in other folders)
