
[metadata]
name = bilana
version = 2.0
author = Fabian Keller
author-email = fabiankeller@wwu.de
description = Package to analyse gromacs md files of bilayer systems
long-description = file: README,
license = MIT
license-file = LICENSE
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >3.4
setup_requires =
    setuptools
install_requires =
    numpy
    MDAnalysis
